tests/expectations/compiler/finalize/read_write_mapping_fail.out
DCE_ENABLED:
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:10:9
     |
  10 |         balances[addr] = amount;
     |         ^^^^^^^^^^^^^^
DCE_DISABLED:
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:10:9
     |
  10 |         balances[addr] = amount;
     |         ^^^^^^^^^^^^^^